Fix HTML structure and update logo source

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <aside id="sidebar" class="p-6 flex flex-col">
             <div class="mb-8 flex items-center justify-center h-12">
-                <img id="crm-logo" src="[PEGA_AQUI_EL_LINK_DE_TU_IMAGEN_DEL_LOGO]" alt="Logo Mini CRM" class="max-h-full max-w-full object-contain">
+                <img id="crm-logo" src="ZClient.png" alt="Logo Mini CRM" class="max-h-full max-w-full object-contain">
             </div>
 
             <nav class="mb-6 space-y-2">
@@ -217,4 +217,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
